--- a/app/src/main/res/layout/activity_close_trap.xml
+++ b/app/src/main/res/layout/activity_close_trap.xml
@@ -79,7 +79,13 @@
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
@@ -96,6 +102,30 @@
                 android:text=""
                 android:textColor="#4A4A4A"
                 android:textSize="20sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:text="* Rodent trapped"
+                    android:textColor="#8C9496"
+                    android:textSize="16sp" />
+
+                <Spinner
+                    android:id="@+id/close_trap_activity_rodent_Spinner"
+                    android:layout_width="100dp"
+                    android:background="@drawable/bg_spinner"
+                    android:layout_gravity="end"
+                    android:layout_height="wrap_content"></Spinner>
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -172,7 +202,7 @@
                     android:layout_marginTop="10dp">
 
                     <EditText
-                        android:id="@+id/trap_details_activity_edit_description_EditText"
+                        android:id="@+id/close_trap_activity_description_EditText"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
                         android:background="@drawable/rectangle_2_vd"
