--- a/app/src/main/res/layout/activity_close_trap.xml
+++ b/app/src/main/res/layout/activity_close_trap.xml
@@ -111,10 +111,10 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/close_trap_activity_rodent_trapped"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="end"
-                    android:text="* Rodent trapped"
                     android:textColor="#8C9496"
                     android:textSize="16sp" />
 
