--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/sign_in_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -107,6 +108,24 @@
                 android:textSize="20sp"
                 android:text="Sign in"
                 android:textColor="@color/kwik_me_white" />
+
+            <TextView
+                android:id="@+id/sign_in_contact_administrator_textview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:lines="3"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:paddingLeft="32dp"
+                android:paddingRight="32dp"
+                android:text="@string/ipm_login_contact_administrator"
+                android:textAlignment="center"
+                android:textColor="@color/deepcarminepink"
+                android:background="@drawable/textview_error_border"
+                android:textSize="18sp"
+                android:visibility="invisible" />
 
         </LinearLayout>
     </LinearLayout>
